--- a/main.html
+++ b/main.html
@@ -10,6 +10,6 @@
   </header>
   <nav>
     <a href="#home">Home</a>
-    <a href="#about">About Me</a>
+    <a href="/about.html">About Me</a>
   </nav>
 </body>
