--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 <body>
   <header>
      <div class="header-box">
-          <h1 id="header-text">MrCreeper's Site</h1>
+          <h1 id="header-text">Crecher's Site</h1>
     </div>
   </header>
   <nav>
