--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -10,6 +10,6 @@
   </header>
   <nav>
     <a href="#home">Home</a>
-    <a href="/about.html">About Me</a>
+    <a href="/portfolio/about.html">About Me</a>
   </nav>
 </body>
